src/main/metadata/objects/SMS_Batch__c.object
<CustomObject>
    <description>This object will set a schedule job to send SMS in a batch.</description>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <inlineHelpText>Please set the size around 10000</inlineHelpText>
        <label>Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Start__c</fullName>
        <label>Batch Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Batch_Status__c</fullName>
        <description>To verify the progress status of one batch job.</description>
        <label>Batch Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>OB_SMS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ScheduleJobID__c</fullName>
        <description>for background code process,not shown to user</description>
        <label>Schedule Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestRecipientGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Recipient Group</label>
        <referenceTo>TestRecipientGroup__c</referenceTo>
        <relationshipName>SMSBatch</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SMS/MMS Batch</label>
    <nameField>
        <displayFormat>SMB-{0000}</displayFormat>
        <label>SMS Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Batch</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Batch_Start_Time_no_earlier_than_Now</fullName>
        <active>true</active>
        <description>Batch Start Time should not be earlier than Now</description>
        <errorConditionFormula>OR(AND(ISNEW(), Batch_Start__c&lt; NOW() ),AND( ISCHANGED( Batch_Start__c ), Batch_Start__c &lt;NOW() ))</errorConditionFormula>
        <errorDisplayField>Batch_Start__c</errorDisplayField>
        <errorMessage>Sorry you can&apos;t set the batch start time be ealier than current time.</errorMessage>
    </validationRules>
</CustomObject>